--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     test = await response.json()
     message1 = """<p>Hier kommt ein Bild:</p> """
     print(message1)
-    urltest=test['message']
+    urltest=test['url']
     print(symbol1+"img src="+symbol2+urltest+symbol3)
     </py-script>
   </body> 
